# didactic-adventure

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: CI.yaml  Release.yaml
raws/: spawns.json
src/: components.rs  gamesystem.rs  gui.rs  main.rs  melee_combat_system.rs  monster_ai_system.rs  player.rs  rng.rs  saveload_system.rs  spawner.rs
src/effects/: damage.rs  mod.rs
src/gui/: hud.rs  tooltips.rs
src/map/: themes.rs
src/map_builders/: mod.rs
src/raws/: item_structs.rs  mob_structs.rs  rawmaster.rs
src/systems/: gamemove_system.rs  melee_combat_system.rs.bak  mod.rs
src/systems/ai/: adjacent_ai_system.rs  encumbrance_system.rs  visible_ai_system.rs
src/systems/dispatcher/: mod.rs  multi_thread.rs
